# amr-demo

./: .gitmodules  README.md  makescript.sh
docs/: Doxyfile  main_doc.md
docs/hpc-amr-framework/: HPC_AMR_Framework.tex
example/: input.amr  input.physics
example/grids/: naca0012.inp  simple_2d.inp  single_2d.inp  single_3d.inp  single_3d_irregular.inp
scripts/: build_3PL.sh  build_demo.sh
src/: CMakeLists.txt  Makefile  make_all.sh
src/amr/src/: CMakeLists.txt  Makefile  amr_evolve.c  amr_evolve.h  amr_external.c  amr_external.h  amr_initialize.c  amr_initialize.h  amr_mpi.c  amr_mpi.h  amr_p4est_utilities.c  amr_p4est_utilities.h  amr_regrid.c  amr_regrid.h  amr_tag.c  amr_tag.h  amr_utilities.c  amr_utilities.h  amr_version_tag.h  amr_vtk.c  amr_vtk.h  main.c  main.h  var_ctx.h  var_defines.h  var_external.h  var_grid.h  var_initialize.h  var_mpi.h  var_quad.h  var_solution.h  var_tag.h  var_vtk.h
src/physics/src/: CMakeLists.txt  Makefile  hpc_amr_coarsen_operator_2d.c  hpc_amr_coarsen_operator_3d.c  hpc_amr_evolve_solver.c  hpc_amr_initialize_quadrant.c  hpc_amr_initialize_solver.c  hpc_amr_refine_operator_2d.c  hpc_amr_refine_operator_3d.c  hpc_amr_regrid_points.c  hpc_amr_tag_feature.c  physics_coarsen_operator.h  physics_coarsen_operator_2d.c  physics_coarsen_operator_3d.c  physics_evolve_interface.c  physics_evolve_interface.h  physics_go.c  physics_go.h  physics_initialize.c  physics_initialize.h  physics_initialize_quadrant.c  physics_initialize_quadrant.h  physics_main.h  physics_mpi.c  physics_mpi.h  physics_norm_residual.c  physics_norm_residual.h  physics_refine_operator.h  physics_refine_operator_2d.c  physics_refine_operator_3d.c  physics_regrid_points.c  physics_regrid_points.h  physics_residual_bc_structured.c  physics_residual_bc_structured.h  physics_residual_bc_unstructured.c  physics_residual_bc_unstructured.h  physics_residual_face_full_hang_structured.c  physics_residual_face_full_hang_structured.h  physics_residual_face_full_structured.c  physics_residual_face_full_structured.h  (+31 more)
src/solver/src/: CMakeLists.txt  Makefile  bc_2d_module.F90  bc_3d_module.F90  bilinear_node_2d_module.F90  bilinear_node_3d_module.F90  cell_volume_module.F90  flux_2d_module.F90  flux_3d_module.F90  initial_boundary_2d_module.F90  initial_boundary_3d_module.F90  initial_condition_2d_module.F90  initial_condition_3d_module.F90  integrate_2d_module.F90  integrate_3d_module.F90  my_kinddefs.F90  normals_2d_module.F90  normals_3d_module.F90  solver_coarsen_operator_2d.F90  solver_coarsen_operator_3d.F90  solver_group.F90  solver_initialize_quadrant.F90  solver_initialize_quadrant_2d_module.F90  solver_initialize_quadrant_3d_module.F90  solver_refine_operator_2d.F90  solver_refine_operator_3d.F90  solver_residual_bc_structured.F90  solver_residual_bc_structured_2d_module.F90  solver_residual_bc_structured_3d_module.F90  solver_residual_bc_unstructured.F90  solver_residual_bc_unstructured_2d_module.F90  solver_residual_bc_unstructured_3d_module.F90  solver_residual_face_full_hang_structured_2d.F90  solver_residual_face_full_hang_structured_3d.F90  solver_residual_face_full_structured.F90  solver_residual_face_full_structured_2d_module.F90  solver_residual_face_full_structured_3d_module.F90  solver_residual_face_full_unstructured.F90  solver_residual_face_full_unstructured_2d_module.F90  solver_residual_face_full_unstructured_3d_module.F90  (+14 more)
